--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,86 @@ button {
   color: #f1345d;
   margin-bottom: 8px;
 }
+
+.blogs_preview a {
+  text-decoration: none;
+}
+
+/* blog detials page */
+.blog-details h2 {
+  font-size: 20px;
+  color: #f1356d;
+  margin-bottom: 10px;
+}
+
+.blog-details div {
+  margin: 20px 0;
+}
+.blog-details button {
+  background: #f1356d;
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+}
+
+/* create page */
+.create {
+  max-width: 400px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.create label {
+  text-align: left;
+  display: block;
+}
+
+.create h2 {
+  font-size: 20px;
+  color: #f1356d;
+  margin-bottom: 30px;
+}
+
+.create input,
+.create textarea,
+.create select {
+  width: 100%;
+  padding: 6px 10px;
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  box-sizing: border-box;
+  display: block;
+}
+
+.create button {
+  background: #f1356d;
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+}
+.not-found {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.not-found h1 {
+  font-size: 160px;
+  text-align: center;
+}
+.not-found h2 {
+  font-size: 34px;
+  text-align: center;
+}
+.not-found p {
+  font-size: 20px;
+  text-align: center;
+}
+.not-found a {
+  font-size: 20px;
+  text-align: center;
+  margin: 20px 0;
+  color: #f1356d;
+  text-decoration: none;
+}
